--- a/isopack-v2/tsconfig.packages.json
+++ b/isopack-v2/tsconfig.packages.json
@@ -13,7 +13,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true
   }
 }
