Allow JS in package tsconfig

--- a/isopack-v2/tsconfig.packages.json
+++ b/isopack-v2/tsconfig.packages.json
@@ -12,6 +12,7 @@
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     "skipLibCheck": true
