--- a/isopack-v2/tsconfig.packages.json
+++ b/isopack-v2/tsconfig.packages.json
@@ -7,7 +7,7 @@
       "es2017"
     ],
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
