--- a/isopack-v2/package.json
+++ b/isopack-v2/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.7.4",
     "connect": "^3.7.0",
     "cookie-parser": "^1.4.7",
+    "denque": "^2.1.0",
     "errorhandler": "^1.5.1",
     "parseurl": "^1.3.3",
     "qs": "^6.13.0",
