--- a/isopack-v2/package.json
+++ b/isopack-v2/package.json
@@ -26,5 +26,8 @@
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
     "useragent": "^2.3.0"
-  }
+  },
+  "workspaces": [
+    "test-app"
+  ]
 }
