--- a/isopack-v2/package.json
+++ b/isopack-v2/package.json
@@ -11,21 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/connect": "^3.4.38",
-    "@vlasky/whomst": "^0.1.7",
-    "basic-auth-connect": "^1.1.0",
-    "compression": "^1.7.4",
-    "connect": "^3.7.0",
-    "cookie-parser": "^1.4.7",
-    "denque": "^2.1.0",
-    "errorhandler": "^1.5.1",
-    "parseurl": "^1.3.3",
-    "qs": "^6.13.0",
-    "send": "^1.1.0",
-    "stream-to-string": "^1.2.1",
-    "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "useragent": "^2.3.0"
+    "tsup": "^8.3.5"
   },
   "workspaces": [
     "test-app"
