--- a/isopack-v2/package.json
+++ b/isopack-v2/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3"
   },
   "workspaces": [
     "test-app"
-  ]
+  ],
+  "dependencies": {
+    "@meteorjs/reify": "^0.25.4"
+  }
 }
