--- a/isopack-v2/package.json
+++ b/isopack-v2/package.json
@@ -15,7 +15,8 @@
     "typescript": "^5.6.3"
   },
   "workspaces": [
-    "test-app"
+    "test-app",
+    "dist/packages/.npm/package"
   ],
   "dependencies": {
     "@meteorjs/reify": "^0.25.4"
